--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
+#Ignore the virtual environment folder
 venv/
+
+#Ignore Python bytecode files
+__pycache__/
+*.pyc
+
+#Ignore IDE specific files
+.vscode/
+
